Fixed question layout on mobile

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_question.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_question.scss
@@ -1,9 +1,15 @@
-.app-question {
+.app-question--short {
 
-  &--short {
-    .app-question__answer {
-      margin-bottom: govuk-spacing(3);
-    }
+  .app-question__answer {
+    margin-bottom: govuk-spacing(3);
+  }
+
+  @include govuk-media-query($from: desktop) {
+    margin: govuk-spacing(8) 0;
+    clear: both;
+    position: relative;
+    display: table;
+    width: 100%;
 
     .govuk-radios__item {
       width: auto;
@@ -47,57 +53,37 @@
     .govuk-radios__label {
       padding-top: 3em;
     }
-  }
 
-  @include govuk-media-query($from: desktop) {
-    &--short {
-      margin: govuk-spacing(8) 0;
-      clear: both;
+    .govuk-error-message {
+      margin-bottom: 0;
+    }
+
+    .app-question__question,
+    .app-question__answer {
+      display: table-cell;
+      vertical-align: middle;
+      width: 40%;
       position: relative;
-      display: table;
-      width: 100%;
-
-      .govuk-error-message {
-        margin-bottom: 0;
-      }
-
-      .app-question__question,
-      .app-question__answer {
-        display: table-cell;
-        vertical-align: middle;
-        width: 40%;
-        position: relative;
-        height: 156px;
-      }
-
-      .app-question__answer {
-        width: 60%;
-      }
-
-      .govuk-fieldset__heading {
-        padding-right: govuk-spacing(5);
-
-      }
-
-      .app-question__question {
-        border-right: 1px solid govuk-colour('black');
-      }
-
-      .govuk-form-group {
-        margin-bottom: 0;
-      }
+      height: 156px;
     }
 
-    &--long {
-      .app-question__question {
-        @include govuk-responsive-margin(6, "bottom");
-      }
-
-      .govuk-radios__item {
-        width: auto;
-        @include govuk-responsive-margin(6, "right");
-      }
+    .app-question__answer {
+      width: 60%;
     }
+
+    .govuk-fieldset__heading {
+      padding-right: govuk-spacing(5);
+
+    }
+
+    .app-question__question {
+      border-right: 1px solid govuk-colour('black');
+    }
+
+    .govuk-form-group {
+      margin-bottom: 0;
+    }
+
   }
 }
 
@@ -105,6 +91,17 @@
   .app-question__answer {
     @include govuk-responsive-margin(6, "bottom");
     @include govuk-responsive-margin(6, "top");
+  }
+
+  @include govuk-media-query($from: desktop) {
+    .app-question__question {
+      @include govuk-responsive-margin(6, "bottom");
+    }
+
+    .govuk-radios__item {
+      width: auto;
+      @include govuk-responsive-margin(6, "right");
+    }
   }
 }
 
